--- a/QualitySouvenirs/Views/Products/Create.cshtml
+++ b/QualitySouvenirs/Views/Products/Create.cshtml
@@ -29,7 +29,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="FilePath" class="control-label">Image</label>
-                <input asp-for="FilePath" class="form-control" />
+                <div class="col-md-10">
+                    <input type="file" name="uploadFile" id="uploadFile" />
+                    <img id="img-preview" style="max-width: 300px;" class="img img-responsive" src="">
+                </div>
                 <span asp-validation-for="FilePath" class="text-danger"></span>
             </div>
             <div class="form-group">
