--- a/QualitySouvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
+++ b/QualitySouvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
@@ -4,49 +4,49 @@
     ViewData["Title"] = "Default";
 }
 
-@*<h2><span class="glyphicon glyphicon glyphicon-shopping-cart"></span></h2>
+<h2><span class="glyphicon glyphicon glyphicon-shopping-cart"></span></h2>
 
-    <div class="container">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-2">
+            <h4 class="display-4">Tutorial</h4>
+        </div>
+        <div class="col-sm-2">
+            <h4 class="display-4">Quantity</h4>
+        </div>
+        <div class="col-sm-2">
+            <h4 class="display-4">Price</h4>
+        </div>
+    </div>
+
+    @foreach (var item in Model.CartItems)
+    {
         <div class="row">
-            <div class="col-sm-2">
-                <h4 class="display-4">Tutorial</h4>
-            </div>
-            <div class="col-sm-2">
-                <h4 class="display-4">Quantity</h4>
-            </div>
-            <div class="col-sm-2">
-                <h4 class="display-4">Price</h4>
+
+            <div class="col-sm-2"><a asp-action="Details" asp-route-id="@item.Product.ItemID">@item.Product.ItemName</a> </div>
+
+            <div class="col-sm-2">@item.ItemCount         <a asp-action="RemoveFromCart" asp-controller="ShoppingCart" asp-route-id="@item.Product.ItemID"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
+
+            <div class="col-sm-2">$@item.Product.Price</div>
+        </div>
+    }
+
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-2">Grand Total:</div>
+
+        <div class="col-sm-2">$@Model.SubTotal</div>
+    </div>
+
+    @if (@Model.CartItems.Count > 0)
+    {
+        <div class="row">
+            <div class="col-sm-offset-4">
+                <a asp-action="Create" asp-controller="Orders">
+                    Proceed To Checkout <span class="glyphicon glyphicon-step-forward"></span>
+                </a>
             </div>
         </div>
 
-        @foreach (var item in Model.CartItems)
-        {
-            <div class="row">
-
-                <div class="col-sm-2"><a asp-action="Details" asp-route-id="@item.Tutorial.ID">@item.Tutorial.Name</a> </div>
-
-                <div class="col-sm-2">@item.Count         <a asp-action="RemoveFromCart" asp-controller="ShoppingCart" asp-route-id="@item.Tutorial.ID"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
-
-                <div class="col-sm-2">$@item.Tutorial.Price</div>
-            </div>
-        }
-
-        <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-2">Grand Total:</div>
-
-            <div class="col-sm-2">$@Model.CartTotal</div>
-        </div>
-
-        @if (@Model.CartItems.Count > 0)
-        {
-            <div class="row">
-                <div class="col-sm-offset-4">
-                    <a asp-action="Create" asp-controller="Orders">
-                        Proceed To Checkout <span class="glyphicon glyphicon-step-forward"></span>
-                    </a>
-                </div>
-            </div>
-
-        }
-    </div>*@
+    }
+</div>
