Edited Member Management and ShoppingCart.cs Shopping cart now displays on home page though adding to the cart throws an error. Tried to make it so the admin can delete or edit users.

--- a/QualitySouvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
+++ b/QualitySouvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
@@ -35,7 +35,7 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-2">Grand Total:</div>
 
-        <div class="col-sm-2">$@Model.SubTotal</div>
+        <div class="col-sm-2">$@Model.GrandTotal</div>
     </div>
 
     @if (@Model.CartItems.Count > 0)
