--- a/QualitySouvenirs/Views/AdminApplicationUsers/Index.cshtml
+++ b/QualitySouvenirs/Views/AdminApplicationUsers/Index.cshtml
@@ -43,6 +43,8 @@
                     {
                         <a asp-action="EnableDisable" asp-route-id="@item.Id">Enable</a>
                     }
+                    | <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    | <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
