--- a/QualitySouvenirs/Views/Products/Index.cshtml
+++ b/QualitySouvenirs/Views/Products/Index.cshtml
@@ -57,7 +57,7 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.ItemID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ItemID">Details</a> |
+                    <a asp-controller="Store" asp-action="Details" asp-route-id="@item.ItemID">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.ItemID">Delete</a>
                 </td>
             </tr>
