--- a/QualitySouvenirs/Views/Products/Edit.cshtml
+++ b/QualitySouvenirs/Views/Products/Edit.cshtml
@@ -29,17 +29,20 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FilePath" class="control-label"></label>
-                <input asp-for="FilePath" class="form-control" />
+                <label asp-for="FilePath" class="control-label">Image</label>
+                <div class="col-md-10">
+                    <input type="file" name="uploadFile" id="uploadFile" />
+                    <img id="img-preview" style="max-width: 300px;" class="img img-responsive" src="">
+                </div>
                 <span asp-validation-for="FilePath" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
+                <label asp-for="CategoryID" class="control-label">Category</label>
                 <select asp-for="CategoryID" class="form-control" asp-items="ViewBag.CategoryID"></select>
                 <span asp-validation-for="CategoryID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SupplierID" class="control-label"></label>
+                <label asp-for="SupplierID" class="control-label">Supplier</label>
                 <select asp-for="SupplierID" class="form-control" asp-items="ViewBag.SupplierID"></select>
                 <span asp-validation-for="SupplierID" class="text-danger"></span>
             </div>
