--- a/QualitySouvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
+++ b/QualitySouvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-2">
-            <h4 class="display-4">Tutorial</h4>
+            <h4 class="display-4">Product</h4>
         </div>
         <div class="col-sm-2">
             <h4 class="display-4">Quantity</h4>
