--- a/QualitySouvenirs/Views/AdminApplicationUsers/Index.cshtml
+++ b/QualitySouvenirs/Views/AdminApplicationUsers/Index.cshtml
@@ -10,13 +10,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Enabled)
+                @Html.DisplayNameFor(model => model.UserName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EmailConfirmed)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Enabled)
             </th>
             <th></th>
         </tr>
@@ -26,13 +29,16 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Enabled)
+                    @Html.DisplayFor(modelItem => item.UserName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.EmailConfirmed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Enabled)
                 </td>
                 <td>
                     @if (item.Enabled == true)
@@ -43,8 +49,8 @@
                     {
                         <a asp-action="EnableDisable" asp-route-id="@item.Id">Enable</a>
                     }
-                    | <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    | <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    | <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
