--- a/QualitySouvenirs/Views/Home/Index.cshtml
+++ b/QualitySouvenirs/Views/Home/Index.cshtml
@@ -10,13 +10,13 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="Banner1" class="img-responsive" />
+            <img src="~/images/ban1.jpg" alt="Banner1" class="img-responsive" />
         </div>
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Banner2" class="img-responsive" />
+            <img src="~/images/ban2.jpg" alt="Banner2" class="img-responsive" />
         </div>
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Banner3" class="img-responsive" />
+            <img src="~/images/ban3.jpg" alt="Banner3" class="img-responsive" />
         </div>
     </div>
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
