--- a/QualitySouvenirs/Views/Shared/_Layout.cshtml
+++ b/QualitySouvenirs/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Quality Souvenirs</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><img style="max-height:30px" src="~/images/logo.jpg" alt="Quality Souvenirs" /></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -48,7 +48,8 @@
                         </li>
                     }
                 </ul>
-                <partial name="_LoginPartial" />
+                @*<partial name="_LoginPartial" />*@
+                @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </nav>
