--- a/QualitySouvenirs/Views/Shared/_LoginPartial.cshtml
+++ b/QualitySouvenirs/Views/Shared/_LoginPartial.cshtml
@@ -3,17 +3,26 @@
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@{var user = UserManager.GetUserAsync(User).Result;}
 
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                @if (!User.IsInRole("Admin"))
+                {
+                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @user.FirstName !</a>
+                }
+                else
+                {
+                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello Admin!</a>
+                }
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
+            @*<li>@await Component.InvokeAsync("ShoppingCartViewModel")</li>*@
         </ul>
     </form>
 }
@@ -22,5 +31,6 @@ else
     <ul class="nav navbar-nav navbar-right">
         <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
+        @*<li>@await Component.InvokeAsync("ShoppingCartViewModel")</li>*@
     </ul>
 }
