Final Commit before Deadline (probably). No Major Fixes, tbh couldnt understand where the root cause of the error is.

--- a/QualitySouvenirs/Views/Categories/Index.cshtml
+++ b/QualitySouvenirs/Views/Categories/Index.cshtml
@@ -28,7 +28,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.CategoryID">Details</a> |
-                    @*<a asp-action="Delete" asp-route-id="@item.CategoryID">Delete</a>*@
+                    <a asp-action="Delete" asp-route-id="@item.CategoryID">Delete</a>
                 </td>
             </tr>
         }
