--- a/QualitySouvenirs/Views/Home/Contact.cshtml
+++ b/QualitySouvenirs/Views/Home/Contact.cshtml
@@ -12,6 +12,5 @@
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support (and other queries):</strong> <a href="mailto:achar04@myunitec.ac.nz">Shivneel Achari</a>
 </address>
