--- a/QualitySouvenirs/Views/Orders/Create.cshtml
+++ b/QualitySouvenirs/Views/Orders/Create.cshtml
@@ -1,50 +1,58 @@
 ﻿@model QualitySouvenirs.Models.Order
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Order";
 }
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
-<h2>Create</h2>
+@{var user = UserManager.GetUserAsync(User).Result;}
+<h2>Create Order</h2>
+<h3><span class="glyphicon glyphicon-exclamation-sign"></span>Please confirm your order details.</h3>
 
-<h4>Order</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+<form asp-action="Create">
+    <div class="form-horizontal">
+        <hr />
+        <div>
+
+            <label for=""></label>
+            <dl class="dl-horizontal">
+                <dt>Date</dt>
+                <dd><p>@DateTime.Now</p></dd>
+
+                <dt>Full Name</dt>
+                <dd><p>@user.FullName</p></dd>
+
+                <dt>Email</dt>
+                <dd><p>@user.Email</p></dd>
+
+                <dt>Mobile Phone Number</dt>
+                <dd>
+                    @if (user.MobilePhoneNumber != null)
+                    {
+
+                        <p>@user.MobilePhoneNumber</p>
+                    }
+                    else
+                    {
+                        <p>No mobile phone number provided.</p>
+                    }
+                </dd>
+
+                <dt>Address</dt>
+                <dd><p>@user.Address</p></dd>
+            </dl>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-3 col-md-10">
+                <button type="submit" class="btn btn-primary btn-lg raised">
+                    Place Order <span class="glyphicon glyphicon-fast-forward"></span>
+                </button>
             </div>
-            <div class="form-group">
-                <label asp-for="OrderStatus" class="control-label"></label>
-                <select asp-for="OrderStatus" class="form-control"></select>
-                <span asp-validation-for="OrderStatus" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GST" class="control-label"></label>
-                <input asp-for="GST" class="form-control" />
-                <span asp-validation-for="GST" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GrandTotal" class="control-label"></label>
-                <input asp-for="GrandTotal" class="form-control" />
-                <span asp-validation-for="GrandTotal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SubTotal" class="control-label"></label>
-                <input asp-for="SubTotal" class="form-control" />
-                <span asp-validation-for="SubTotal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+</form>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
