--- a/QualitySouvenirs/Views/Orders/Delete.cshtml
+++ b/QualitySouvenirs/Views/Orders/Delete.cshtml
@@ -4,48 +4,93 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Order</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Order</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderStatus)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.OrderStatus)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.GST)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.GST)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.GrandTotal)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.GrandTotal)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.SubTotal)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.SubTotal)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.OrderID)</dt>
+        <dd>@Html.DisplayFor(model => model.OrderID)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.Date)</dt>
+        <dd>@Html.DisplayFor(model => model.Date)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.User.FullName)</dt>
+        <dd>@Html.DisplayFor(model => model.User.FullName)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.User.Email)</dt>
+        <dd>@Html.DisplayFor(model => model.User.Email)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.User.MobilePhoneNumber)</dt>
+        <dd>@Html.DisplayFor(model => model.User.MobilePhoneNumber)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.User.Address)</dt>
+        <dd>@Html.DisplayFor(model => model.User.Address)</dd>
     </dl>
-    
+
+    <table class="table">
+        <tr>
+            <th>ITEMS</th>
+            <th>PRICE</th>
+            <th>QTY</th>
+            <th>SUBTOTAL</th>
+        </tr>
+        @foreach (var item in Model.OrderItems)
+        {
+            var Subtotal = item.Product.Price * item.Quantity;
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.ItemID). @Html.DisplayFor(modelItem => item.Product.ItemName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    $@Subtotal
+                </td>
+            </tr>
+        }
+        <tr>
+            <td></td>
+            <td></td>
+            <td>
+                <label>@Html.DisplayNameFor(model => model.SubTotal)</label>
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.SubTotal)
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>
+                <label>@Html.DisplayNameFor(model => model.GST)</label>
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.GST)
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>
+                <label>@Html.DisplayNameFor(model => model.GrandTotal)</label>
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.GrandTotal)
+            </td>
+        </tr>
+    </table>
+
     <form asp-action="Delete">
-        <input type="hidden" asp-for="OrderID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <a class="btn btn-default" asp-action="Index">Back to List</a>
+        </div>
     </form>
 </div>
