--- a/QualitySouvenirs/Views/Suppliers/Index.cshtml
+++ b/QualitySouvenirs/Views/Suppliers/Index.cshtml
@@ -28,26 +28,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MobilePhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HomePhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmailAddress)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.SupplierID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.SupplierID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SupplierID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MobilePhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HomePhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmailAddress)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.SupplierID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.SupplierID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.SupplierID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
