This is the final commit before submission (I think). Edits to Contact and About Us, nothing else. It sucks that I couldn't figure out the root problem, if only I had spent more time on it. :(

--- a/QualitySouvenirs/Views/Home/About.cshtml
+++ b/QualitySouvenirs/Views/Home/About.cshtml
@@ -1,7 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "About Us";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    I created this simple purchase website because it was required as a part of an assignment and worth marks.
+    <br />
+    That's why I learnt asp.net, though I am currently not very good at it (I mean look at this website) but I will look to get better in the future.
+    <br />
+    Along the way, I learnt that ASP.NET is harder than I thought, and some of the example were a bit confusing for me to understand.
+    <br />
+    I want to continue learning this and hopeful create a better offering.
+</p>
