--- a/QualitySouvenirs/Views/Home/Contact.cshtml
+++ b/QualitySouvenirs/Views/Home/Contact.cshtml
@@ -1,16 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contact Us";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
+<div id="googleMap" style="width:100%;height:250px;"></div>
+<a href="https://goo.gl/maps/VJrWsPgDRix">View larger map</a>
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    139 Carrington Rd<br />
+    Mount Albert, AUK 1025
 </address>
-
+<br />
 <address>
-    <strong>Support (and other queries):</strong> <a href="mailto:achar04@myunitec.ac.nz">Shivneel Achari</a>
+    <strong>Support Rep:</strong> <a href="mailto:achar04@myunitec.ac.nz">Shivneel Achari</a>
 </address>
