Trying to Publish to an FTP server.

--- a/QualitySouvenirs/Views/Home/About.cshtml
+++ b/QualitySouvenirs/Views/Home/About.cshtml
@@ -11,5 +11,5 @@
     <br />
     Along the way, I learnt that ASP.NET is harder than I thought, and some of the example were a bit confusing for me to understand.
     <br />
-    I want to continue learning this and hopeful create a better offering.
+    I want to continue learning this and hopefully create a better offering.
 </p>
